--- a/src/sass/pages/index.module.scss
+++ b/src/sass/pages/index.module.scss
@@ -28,7 +28,7 @@ html[data-mantine-color-scheme='light'] {
 
 .hero-text {
   letter-spacing: .012rem;
-  line-height: 1em;
+  line-height: .9em;
   font-size: 84px;
   @media screen and (max-width: 596px) {
     font-size: 48px;
@@ -46,7 +46,7 @@ html[data-mantine-color-scheme='light'] {
 }
 
 .sub-text{
-  font-size: 24px;
+  font-size: 18px;
   @media screen and (max-width: 596px) {
     font-size: 18px;
   }
